kubernetes/apps/home-automation/n8n/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: home-automation
            k8s:cnpg.io/cluster: n8n
            k8s:cnpg.io/podRole: instance
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: home-automation
            k8s:cnpg.io/cluster: n8n-green
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            k8s:app.kubernetes.io/component: master
            k8s:app.kubernetes.io/instance: redis
            k8s:app.kubernetes.io/name: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP

    - toFQDNs:
        - matchName: slack.com
        - matchName: api.slack.com
        - matchName: northops.slack.com
        - matchName: chefcommunity.slack.com
        - matchName: api.openai.com
        - matchName: api.github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
